# open-lambda

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  DEMO_NOTES.md  Makefile  README.md  boss-test.py  boss.json  boss.json.overrides  call_matrix_cols.csv  call_matrix_sample.csv  centroids.json  centroids_kmeans.json  centroids_kmodes.json  clean_bench.sh  cloudlab.req.sh  dep-trace.json  echo.py  golint.toml  kafkaConfig.json  node-1.json  ol  plot.ipynb  run_bench.sh  serial_run.py  stacks.py  start_ol  template.json  test.py  trace.txt  travis.sh  wasm-test.py
.github/workflows/: ci.yml  pkg.yml
1/config/: template.json  worker-0.json
1/logs/: worker-0.pid
applications/aggregate/: average.py  sls_reg.py  (+1 more)
aws/: client.py  run.sh  server.py
base/: config.json  ol-init  server.py  spin
bench-results/: benchmark-1.json  benchmark-2.json  benchmark-3.json  benchmark-4.json  plot.py
benchmarks/: helper.py  numpy.py  plot.py  wasm-vs-native.py
bin-functions/: Cargo.toml  Cross.toml  Makefile  install-native.sh  install-wasm.sh  rust-toolchain  rust-toolchain.toml
bin-functions/bindings/: Cargo.toml
bin-functions/bindings/src/: args.rs  config.rs  ipc.rs  lib.rs  log.rs  proxy_connection.rs
bin-functions/bindings/src/internal/: mod.rs
bin-functions/bindings/src/internal/standalone/: args.rs  config.rs  ipc.rs  log.rs  mod.rs
bin-functions/bindings/src/internal/wasm/: args.rs  config.rs  ipc.rs  log.rs  mod.rs
bin-functions/hashing/: Cargo.toml
bin-functions/hashing/src/: main.rs
bin-functions/internal-call/: Cargo.toml
bin-functions/internal-call/src/: main.rs
bin-functions/macros/: Cargo.toml
bin-functions/macros/src/: lib.rs
bin-functions/multiply/: Cargo.toml
bin-functions/multiply/src/: main.rs
bin-functions/noop/: Cargo.toml
bin-functions/noop/src/: main.rs
bin-functions/proxy-protocol/: Cargo.toml
bin-functions/proxy-protocol/src/: lib.rs
bin-programs/: install-native.sh  install-wasm.sh  justfile
bin-programs/bindings/: Cargo.toml
bin-programs/bindings/src/: args.rs  ipc.rs  lib.rs  proxy_connection.rs
cache-entry/: Dockerfile  Makefile  initroot.py  ol-init.c  server.py
cgroup/: Makefile  cgroup_init.c
container-proxy/: Cargo.toml  rust-toolchain.toml
container-proxy/src/: main.rs
container-proxy/src/extra/: lambdastore.rs  mod.rs
db-proxy/: Cargo.toml
db-proxy/src/: main.rs
default-ol/: config.json  config.yaml  default-zygotes-40.yaml  default-zygotes-40.yaml.bak  ol.init
docs/: ol_dir.md  runtime_api.md
experiments/: README.md  cg-mem.py  sec.c
go/: go.mod  go.sum  invoke.go  main.go
grpc/: client.py  echo.proto  echo_pb2.py  echo_pb2_grpc.py  server.py
grpc-go/: client.go  echo.proto  go.mod  server.go
grpc-lambda/: client_bar.go  client_echo.go  client_foo.go  client_general.go  go.mod  lambda.proto  server.go
hack/: build.sh  go.sh  pre-commit  versions.txt
imgs/: README
lambda/: Dockerfile  Dockerfile-fork  Makefile  getolpid.c  init  init.c  install.py  nsmodule.c  ol-init.c  server.py  setup.py  sock2.py  spin.c  test.py
lambda-generator/: builder.py  default.json  example.sh  hello.py  poster.py
lambda/runtimes/rust/: Cargo.toml
lambda/runtimes/rust/src/: main.rs
lambdaManager/: dockerManager.go  main.go  run.sh  server.go
min-image/: Dockerfile  Makefile  spin
myworker_k5/: config.json  kafkaConfig.json  ol.init
nginx/: CHANGES  CHANGES.ru  notes.txt
node/: Dockerfile  README.md  kill.py  startup.py
observability/: resource_monitor.go
ol/: main.go
olcontainer/: Makefile  olcontainer_init.c
perf/: inc.perf  ninc.perf
pip-installer/: Dockerfile
pipbench/: README  add_handler_pop.py  client.py  dump_sizes.py  generate_handlers.py  generate_packages.py  load_simulator.c  pip_bench_handler.py  requirements.txt  server.py  setup.sh  top_packages.txt
python/: pyproject.toml
quickstart/: deps.sh  quickstart.json
registry/: Dockerfile  pushserver.go  regpush.go
scripts/: api.py  benchmark.py  bin-test.py  bin_benchmark.py  bin_test.py  boss-test.py  boss_test.py  helper.py  open_lambda.py  package_tests.py  pyproject.toml  remove-cgroups.sh  seccomp_test.py  setup.py  sock-test.py  sock_test.py  test.py  test_sandbox_ci.sh  update_requirements.py  wasm-test.py
serial/: gen.py  serial_gen.py
server-pool/: Dockerfile  Makefile  initservers.py  server.py
sock/: Makefile  sock-init  sock-init.c
src/: go.mod  go.sum  main.go
test-limit-lambda/: f.py  ol.yaml
test-pool/: config.json  ol.init
test-registry/: flask-test.py
test-registry.wasm/: numpy15.py
testing/: autocomplete.py  codereg-config.json  common.py  pychat.py  setup.py  setup_docker.py  worker-config-cache.json  worker-config-cgroup.json  worker-config-olcontainer.json  worker-config-pool.json  worker-config-sock.json  worker-config.json
util/: cluster-logs.py  cluster_manager.py  common.py  create-bridge.sh  nginx.config  pre-commit  regpush.go  setup.py  setup.sh  start-cluster.py  start-local-cluster.py  stop-cluster.py  stop-local-cluster.py
wasm-image/: Dockerfile
wasm-image/runtimes/native/: Cargo.toml  rust-toolchain.toml
wasm-image/runtimes/native/src/: main.rs
wasm-programs/: Cargo.toml  Cross.toml  install.sh
wasm-programs/bindings/: Cargo.toml
wasm-programs/bindings/src/: args.rs  lib.rs  proxy_connection.rs  storage.rs
wasm-programs/proxy-protocol/: Cargo.toml
wasm-programs/proxy-protocol/src/: lib.rs
wasm-worker/: Cargo.toml  rust-toolchain  rust-toolchain.toml
wasm-worker/src/: bindings.rs  condvar.rs  functions.rs  http_client.rs  main.rs  object_types.rs  programs.rs  stack.rs  support.rs
wasm-worker/src/bindings/: args.rs  config.rs  ipc.rs  log.rs  mod.rs  storage.rs
wasm-worker/src/bindings/extra/: lambdastore.rs  mod.rs
worker/: README.md  build.sh  clean.sh  dockerManager.go  go.mod  go.sum  handler.go  handler_lru.go  handler_lru_test.go  handler_test.go  main.go  prep_images.sh  run.sh  server.go  server_test.go
worker-1/: config.json  default-zygotes-40.json  ol.init
workload/: stdev_pop.py  test1.py  test1_client.py
(+2612 files in other folders)
