[workspace]
members = [
    "bindings",
    "macros",
    "noop",
    "hashing",
    "internal-call",
    "multiply",
]
resolver = "2"

[workspace.dependencies]
rand = { version="0.9", default-features=false }

[profile.release]
debug = true
opt-level = 3
lto = false

[patch.crates-io]
getrandom = { git="https://github.com/kaimast/getrandom", branch="open-lambda" }
