[package]
name = "wasm-worker"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.wisc.edu>"]
edition = "2021"

[dependencies]
tokio = { version="1", features=["net", "rt-multi-thread", "signal", "macros"] }
hyper = { version="1" , features=["server", "client", "http1"] }
serde = "1"
serde_bytes = "0.11"
derive_more = "0.99"
clap = { version = "4", default-features=false, features=["help", "suggestions", "color", "std", "cargo", "derive"]}
futures-util = { version="0.3" }
crossbeam = "0.8"
wasmer = { git="https://github.com/kaimast/wasmer.git", branch="zygote-stable", default-features=false, features=["compiler", "async"] }
wasmer-compiler-singlepass = { git="https://github.com/kaimast/wasmer.git", branch="zygote-stable" }
wasmer-compiler-cranelift = { git="https://github.com/kaimast/wasmer.git", branch="zygote-stable" }
wasmer-compiler-llvm = { git="https://github.com/kaimast/wasmer.git", branch="zygote-stable", optional=true }
wasmer-engine-dylib = { git="https://github.com/kaimast/wasmer.git", branch="zygote-stable" }
wasmer-engine = { git="https://github.com/kaimast/wasmer.git", branch="zygote-stable" }
wasmer-vm = { git="https://github.com/kaimast/wasmer.git", branch="zygote-stable" }
lazy_static = "1"
env_logger = "0.10"
log = "0.4"
parking_lot = "0.12"
dashmap = "5"
cfg-if = "1"
cpuprofiler = { version="0", optional=true }
bincode = "1"
async-wormhole = { git="https://github.com/lunatic-solutions/async-wormhole.git" }
rand = "0.8"
open-lambda-proxy-protocol = { path="../bin-functions/proxy-protocol" }
lambda-store-client=  { git="ssh://git@github.com/kaimast/lambda-store.git", optional=true }
http-body-util = "0.1.0-rc.2"
pin-project-lite = "0.2.4"

[features]
default = ["lambdastore"]
llvm-backend = ["wasmer-compiler-llvm"]
lambdastore = ["lambda-store-client"]

[profile.release]
debug = true
opt-level = 3
lto = false # takes way too long

[patch.'https://github.com/lunatic-solutions/async-wormhole.git']
async-wormhole = { git="https://github.com/kaimast/async-wormhole.git", branch="std-asm" }
switcheroo = { git="https://github.com/kaimast/async-wormhole.git", branch="std-asm" }
