[package]
name = "wasm-worker"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.wisc.edu>"]
edition = "2021"

[dependencies]
tokio = { version="1", features=["net", "rt-multi-thread", "signal", "macros"] }
hyper = { version="1" , features=["server", "client", "http1"] }
serde = "1"
serde_bytes = "0.11"
clap = { version = "4", default-features=false, features=["help", "suggestions", "color", "std", "cargo", "derive"]}
futures-util = { version="0.3" }
crossbeam = "0.8"
wasmtime = { version="15", features=["async"] }
wasmtime-runtime = { version="15" }
env_logger = "0.10"
log = "0.4"
parking_lot = "0.12"
dashmap = "5"
cfg-if = "1"
cpuprofiler = { version="0", optional=true }
bincode = "1"
rand = "0.8"
open-lambda-proxy-protocol = { path="../bin-functions/proxy-protocol" }
http-body-util = "0.1.0-rc.2"
pin-project-lite = "0.2"

[profile.release]
debug = true
opt-level = 3
lto = false # takes way too long
