[package]
name = "open-lambda"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.wisc.edu>"]
edition = "2021"

[dependencies]
bincode = "1"
serde_json = "1"
open-lambda-proxy-protocol = { path="../proxy-protocol" }
serde_bytes = "0.11"

[target.'cfg(target_arch="wasm32")'.dependencies]
byte-slice-cast = "1"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
lazy_static = "1"
toml = "0.8"
tokio-util = { version="0.7", features=["codec"] }
log = "0.4"
parking_lot = "0.12"
env_logger = "0.11"
bytes = "1"
serde_bytes = "0.11"
rand = "0.8"
ureq = { version="2", default-features=false, features=["json", "gzip"] }
