[package]
name = "hashing"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.wisc.edu>"]
edition = "2021"

[dependencies]
open-lambda = { path="../bindings" }
open-lambda-macros = { path="../macros" }
sha2 = "0.9"
rand = { version="0.8", default-features=false, features=["getrandom", "small_rng"] }
getrandom = { version="*", features=["open-lambda"] }
