[package]
name = "open-lambda"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.wisc.edu>"]
edition = "2021"

[dependencies]
bincode = "1"
serde_json = "1"
schema = { git="ssh://git@github.com/kaimast/schema.git", default-features=false, features=["json"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
tokio-util = { version="0.6", features=["codec"] }
log = "0.4"
env_logger = "0.8"
bytes = "1"
open-lambda-proxy-protocol = { path="../proxy-protocol" }
