[package]
name = "open-lambda"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.wisc.edu>"]
edition = "2018"

[dependencies]
bincode = "1"
serde_json = "1"
schema = { git="ssh://github.com/kaimast/schema.git", default-features=false, features=["json"] }
open-lambda-protocol = { git="ssh://git@github.com/kaimast/lambda-store.git" }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
log = "0.4"
env_logger = "0.8"
db-proxy-protocol = { path="../proxy-protocol" }
