[package]
name = "db-proxy-protocol"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.wisc.edu>"]
edition = "2018"

[dependencies]
schema = { git="ssh://git@github.com/kaimast/schema.git", default-features=false, features=["json"] }
open-lambda-protocol = { git="ssh://git@github.com/kaimast/lambda-store.git" }
serde = "1"
