[package]
name = "open-lambda-runtime"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.wisc.edu>"]
edition = "2018"

[dependencies]
tokio = { version="1", features=["net", "io-util", "rt-multi-thread", "macros", "signal", "process"] }
hyper = { version="0.14", features=["server", "http1", "runtime", "stream"] }
tokio-stream = { version="0.1", features=["net"] }
simple-logging = "2"
log = "0.4"
dashmap = "5"
nix = "0.26"
futures-util = "0.3"

[profile.release]
debug = true
